refactor: consolidate issue discovery pipelines